fix issue with footer bottom alignment

--- a/app/styles/helper.scss
+++ b/app/styles/helper.scss
@@ -5,13 +5,12 @@
 html {
   box-sizing: border-box;
   -ms-overflow-style: scrollbar;
-
-	height: 100%;
+	height: 100vh;
 	font-size: 1vw;
 }
 
 body {
-	height: 100%;
+	min-height: 100vh;
 	position: relative;
 	font-family: $primary-font;
 	color: $primary-text-color;
